--- a/chain_mapping.ipynb
+++ b/chain_mapping.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOFAvvDClor+uY+j0Mfjug",
+      "authorship_tag": "ABX9TyMRtQFtPP5swsp8V4++ZQWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MK_S8vyY608T",
-        "outputId": "5458803c-e8f4-4265-b73d-0318d1b1ce3a"
+        "outputId": "49e85d74-9b67-4fd9-c9e3-af826d3505dd"
       },
       "outputs": [
         {
@@ -49,12 +49,37 @@
             "\n",
             "\n",
             "\n",
-            "{'allies': {'Foggy Nelson': 'bestie',\n",
+            "Before key manipulation attempt on 2nd dictionary in the ChainMap\n",
+            "\n",
+            "\n",
+            "{'allies': {'Foggy Nelson': 'Law partner & best friend',\n",
             "            'Karen Page': 'Investigator & confidante',\n",
             "            'Claire Temple': 'Medical ally'},\n",
             " 'adversaries': {'Wilson Fisk': 'Kingpin of crime',\n",
             "                 'Bullseye': 'Psychopathic assassin',\n",
-            "                 'Echo': 'Formidable martial artist (sometimes ally)'}}\n"
+            "                 'Echo': 'Formidable martial artist (sometimes ally)'}}\n",
+            "\n",
+            "\n",
+            "After key manipulation attempt on 2nd dictionary in the ChainMap\n",
+            "\n",
+            "\n",
+            "{'allies': {'Foggy Nelson': 'Law partner & best friend',\n",
+            "            'Karen Page': 'Investigator & confidante',\n",
+            "            'Claire Temple': 'Medical ally'},\n",
+            " 'adversaries': {'Wilson Fisk': 'Kingpin of crime',\n",
+            "                 'Bullseye': 'Psychopathic assassin',\n",
+            "                 'Echo': 'Formidable martial artist (sometimes ally)'}}\n",
+            "\n",
+            "\n",
+            "Our attempted key manipulation actually was added as a new key:value pair in our first dict because of ChainMaps API\n",
+            "\n",
+            "\n",
+            "{'hero_name': 'Daredevil',\n",
+            " 'alter_ego': 'Matt Murdock',\n",
+            " 'first_appearance': 'Daredevil #1 (April 1964)',\n",
+            " 'publisher': 'Marvel Comics',\n",
+            " 'base_of_operations': 'Hell’s Kitchen, New York',\n",
+            " 'allies': 'Wilson Fisk'}\n"
           ]
         }
       ],
@@ -130,13 +155,24 @@
         "demo_chain[\"hero_name\"] = \"Daredevil\"\n",
         "\n",
         "#now demonstrating our inability to manipulate key values in dictionaries after the first dict of the ChainMap\n",
-        "\n",
-        "demo_chain[\"allies\"][\"Foggy Nelson\"] = \"bestie\"\n",
+        "print(\"\\n\" * 2) #adding 2 blanklines for visual clarity\n",
+        "print(\"Before key manipulation attempt on 2nd dictionary in the ChainMap\")\n",
+        "print(\"\\n\")\n",
+        "pprint(dd_relationships, sort_dicts=False)\n",
+        "demo_chain[\"allies\"] = \"Wilson Fisk\"\n",
         "\n",
         "#verifying that we couldn't modify a key that's not the first insertion with a print statement\n",
         "\n",
-        "print(\"\\n\" * 2)\n",
-        "pprint(dd_relationships, sort_dicts=False)"
+        "print(\"\\n\") #adding 2 blanklines for visual clarity\n",
+        "print(\"After key manipulation attempt on 2nd dictionary in the ChainMap\")\n",
+        "print(\"\\n\")\n",
+        "pprint(dd_relationships, sort_dicts=False)\n",
+        "\n",
+        "#showing the reader that when we wrote demo_chain[\"allies\"] = \"Wilson Fisk\", it actually got written in dd_profile, demo_chain.maps[0]\n",
+        "print(\"\\n\")\n",
+        "print(\"Our attempted key manipulation actually was added as a new key:value pair in our first dict because of ChainMaps API\")\n",
+        "print(\"\\n\")\n",
+        "pprint(dd_profile, sort_dicts=False)"
       ]
     }
   ]
